--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "mongoose": "^8.17.1",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
